--- a/app/views/redaction/news/_toolpanel.html.haml
+++ b/app/views/redaction/news/_toolpanel.html.haml
@@ -71,4 +71,4 @@
     = render 'wiki_help'
 
 .popup-event{"data-popup-id": "toolpanel"}
-  = image_tag("icones/arrow-right.svg", alt: "Afficher les détails", title: "Afficher les détails")
+  = image_tag("/images/icones/arrow-right.svg", alt: "Afficher les détails", title: "Afficher les détails")
