Mécanisme de résolution standard pour templates rédaction/modération
Il y avait deux classes pour dynamiquement chercher des templates entre
les espaces de rédaction et modération, après tests et recherches il
semble que ça ne soit pas (ou plus?) nécessaire.

--- a/app/views/boards/_large.html.haml
+++ b/app/views/boards/_large.html.haml
@@ -3,7 +3,7 @@
   .inbox-container
     .inbox.large
       - boards.reverse.each do |board|
-        = render board, board: board, box: box, is_large: true
+        = render 'boards/board', board: board, box: box, is_large: true
   - if current_account && current_account.can_post_on_board?
     = form_tag "/board", class: 'chat' do
       = hidden_field :board, :object_type, value: board.object_type
