--- a/app/views/moderation/news/index.html.haml
+++ b/app/views/moderation/news/index.html.haml
@@ -37,4 +37,4 @@
     = list_of(@polls) do |poll|
       = link_to poll.title, [:moderation, poll]
 
-= render 'board'
+= render 'redaction/news/board'
