--- a/app/views/dashboard/_comments.html.haml
+++ b/app/views/dashboard/_comments.html.haml
@@ -23,10 +23,10 @@
       %tr
         %td #{translate_content_type comment.content_type} : #{link_to_content comment.content}
         %td= link_to comment.title, path_for_content(comment.node.content) + "#comment-#{comment.id}"
-        %td.date= comment.created_at.to_s(:posted)
+        %td.date= comment.created_at.to_fs(:posted)
         %td.number= comment.bound_score
         %td.number
           - if answer && !answer.read_by?(current_account)
             = image_tag "/images/icones/comment.png", alt: "Nouveaux commentaires !", class: "thread-new-comments"
           = comment.nb_answers
-        %td.date= answer ? answer.created_at.to_s(:posted) : " "
+        %td.date= answer ? answer.created_at.to_fs(:posted) : " "
