--- a/app/views/dashboard/_trackers.html.haml
+++ b/app/views/dashboard/_trackers.html.haml
@@ -20,4 +20,4 @@
         %td= tracker.state_name
         %td.number= node.score
         %td.number= node.comments.count
-        %td.date= tracker.created_at.to_s(:posted)
+        %td.date= tracker.created_at.to_fs(:posted)
