--- a/app/views/boards/show.tsv.erb
+++ b/app/views/boards/show.tsv.erb
@@ -1,3 +1,3 @@
 <% @boards.reverse_each do |board| %>
-<%= board.id %>	<%= board.created_at.to_s(:timestamp) %>	<%= raw board.remove_control_chars board.user_agent %>	<%= board.user_name %>	<%= raw board.remove_control_chars board.message %>
+<%= board.id %>	<%= board.created_at.to_fs(:timestamp) %>	<%= raw board.remove_control_chars board.user_agent %>	<%= board.user_name %>	<%= raw board.remove_control_chars board.message %>
 <% end %>
