Chemin manquant pour accéder à un "partials" de comment
Il pourrait y avoir d'autres cas, cela vient de la simplification de
recherche des chemins de partiaux, suite (ou grâce) à la migration à rails 7

--- a/app/views/comments/_thread.html.haml
+++ b/app/views/comments/_thread.html.haml
@@ -1,5 +1,5 @@
 %li.comment{comment_attr(thread.comment)}
-  = render thread.comment, hide_content_title: 1
+  = render 'comments/comment', comment: thread.comment, hide_content_title: 1
   - if thread.children.any?
     %ul
       - thread.children.each do |thread|
