Utilisation de la gem normalize, plutôt qu'un module npm

--- a/app/assets/stylesheets/RonRonnement.scss
+++ b/app/assets/stylesheets/RonRonnement.scss
@@ -2,7 +2,7 @@
 /* Copyright 2010 Nicolas Schoonbroodt (css) <nicolas@elsewhere.be>      */
 /* Distributed under GNU AGPL v3 License                                 */
 
-@import "normalize.css/normalize";
+@import "normalize-rails/normalize.css";
 
 /* Pixel size constants */
 $PX_MARGE_GAUCHE: 42px;
